fix: Se agrego un overflow en x para evitar el scroll en x

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
 html,
 body {
   color: #fff;
-  min-height: 100vh;
+  overflow-x: hidden;
 }
 
 /** IMAGEN PERSONAL **/
